fix Banner seeMore div poistioning on mobile

--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -63,7 +63,7 @@
         height: 50rem;
     }
     .seeMore{
-        transform: translateY(14rem);
+        transform: translateY(11rem);
     }
     .seeMore span{
         font-size: 1.2rem;
